syntax="proto3";

option csharp_namespace = "Shared.Protos";

package UploaderPackage;


message FileChunk {
  bytes data = 1;
  int64 offset = 2;
  bool is_final = 3;
  int32 chunk_number = 4;
}

message UploadProgress {
  int64 bytes_uploaded = 1;
  int64 total_bytes = 2;
  int32 total_chunks = 3;
  int32 completed_chunks = 4;
}

service UploaderService{
  rpc UploadFile(stream FileChunk) returns (stream UploadProgress);
}

